--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,15 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
   datasource:
     url: jdbc:h2:mem:onlog
     username: sa
     password:
     driver-class-name: org.h2.Driver
+
+  data:
+    web:
+      pageable:
+        one-indexed-parameters: true   # 웹 요청이 날라왔을 때 페이지 인덱싱을 1부터 시작 하도록 변경
+        default-page-size: 5   # 페이지 사이즈 지정
